// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionTypeChooser /> should match the snapshot 1`] = `
.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  position: relative;
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  height: 80px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-right: 21px;
  padding-left: 21px;
  cursor: pointer;
  border-radius: 5px;
  border: 1px dashed #B0BAC9;
  border-radius: 5px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:hover {
  background-color: #E9F1FB;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: rgba(200,102,234,1);
  color: rgba(200,102,234,1);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="c2"
        display="flex"
        height="80"
        width="100%"
      >
        <div
          class="c3"
        >
          <p
            class="c4"
            color="#C866EA"
            font-weight="bold"
          >
            <span>
              + Add new screen
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<QuestionTypeChooser /> should match the snapshot while being open 1`] = `
.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  position: relative;
}

.c5 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  position: absolute;
  margin-top: 15px;
  border-radius: 10px;
  box-shadow: 0px 0px 50px rgba(0,0,0,0.08);
  border-radius: 10px;
}

.c6 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  padding: 16px;
  border-bottom: 1px solid #E9F1FB;
}

.c8 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  padding: 8px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  height: 80px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-right: 21px;
  padding-left: 21px;
  cursor: pointer;
  border-radius: 5px;
  border: 1px dashed #B0BAC9;
  border-radius: 5px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:hover {
  background-color: #E9F1FB;
}

.c10 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  padding: 8px;
  margin-bottom: 4px;
  cursor: pointer;
  border-radius: 5px;
  border-radius: 5px;
}

.c10:hover {
  background-color: #E9F1FB;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: rgba(200,102,234,1);
  color: rgba(200,102,234,1);
}

.c7 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-size: 15px;
  font-weight: 700;
  color: #2F3850;
}

.c12 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 500;
  color: #2F3850;
}

.c11 {
  border-radius: 50%;
  background-color: #0086F8;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(0,134,248,1);
  opacity: 1;
  color: #2F3850;
}

.c13 {
  border-radius: 50%;
  background-color: #C866EA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(200,102,234,1);
  opacity: 1;
  color: #2F3850;
}

.c14 {
  border-radius: 50%;
  background-color: #FFA16C;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(255,161,108,1);
  opacity: 1;
  color: #2F3850;
}

.c15 {
  border-radius: 50%;
  background-color: #FFCF5B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(255,207,91,1);
  opacity: 1;
  color: #2F3850;
}

.c16 {
  border-radius: 50%;
  background-color: #FF7691;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(255,118,145,1);
  opacity: 1;
  color: #2F3850;
}

.c17 {
  border-radius: 50%;
  background-color: #CED3E4;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(206,211,228,1);
  opacity: 1;
  color: #2F3850;
}

.c18 {
  border-radius: 50%;
  background-color: #107969;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(16,121,105,1);
  opacity: 1;
  color: #2F3850;
}

.c19 {
  border-radius: 50%;
  background-color: #9AA1B6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-right: 18px;
  background-color: rgba(154,161,182,1);
  opacity: 1;
  color: #2F3850;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="c2"
        display="flex"
        height="80"
        width="100%"
      >
        <div
          class="c3"
        >
          <p
            class="c4"
            color="#C866EA"
            font-weight="bold"
          >
            <span>
              + Add new screen
            </span>
          </p>
        </div>
      </div>
      <div
        class="c5"
        width="100%"
      >
        <div
          class="c6"
        >
          <p
            class="c7"
            font-size="15px"
            font-weight="bold"
          >
            Choose type of screen
          </p>
        </div>
        <div
          class="c0"
        >
          <div
            class="c8"
            width="100%"
          >
            <div
              class="c9"
            >
              <div
                class="c10"
              >
                <div
                  class="c3"
                >
                  <div
                    class="c11"
                    opacity="1"
                  />
                  <p
                    class="c12"
                    font-weight="medium"
                  >
                    Single answer screen
                  </p>
                </div>
              </div>
              <div
                class="c10"
              >
                <div
                  class="c3"
                >
                  <div
                    class="c13"
                    opacity="1"
                  />
                  <p
                    class="c12"
                    font-weight="medium"
                  >
                    Multi answer screen
                  </p>
                </div>
              </div>
              <div
                class="c10"
              >
                <div
                  class="c3"
                >
                  <div
                    class="c14"
                    opacity="1"
                  />
                  <p
                    class="c12"
                    font-weight="medium"
                  >
                    Textbox screen
                  </p>
                </div>
              </div>
              <div
                class="c10"
              >
                <div
                  class="c3"
                >
                  <div
                    class="c15"
                    opacity="1"
                  />
                  <p
                    class="c12"
                    font-weight="medium"
                  >
                    Number screen
                  </p>
                </div>
              </div>
              <div
                class="c10"
              >
                <div
                  class="c3"
                >
                  <div
                    class="c16"
                    opacity="1"
                  />
                  <p
                    class="c12"
                    font-weight="medium"
                  >
                    Grid screen
                  </p>
                </div>
              </div>
              <div
                class="c10"
              >
                <div
                  class="c3"
                >
                  <div
                    class="c16"
                    opacity="1"
                  />
                  <p
                    class="c12"
                    font-weight="medium"
                  >
                    Visual Analogue Scale screen
                  </p>
                </div>
              </div>
              <div
                class="c10"
              >
                <div
                  class="c3"
                >
                  <div
                    class="c17"
                    opacity="1"
                  />
                  <p
                    class="c12"
                    font-weight="medium"
                  >
                    Information screen
                  </p>
                </div>
              </div>
              <div
                class="c10"
              >
                <div
                  class="c3"
                >
                  <div
                    class="c18"
                    opacity="1"
                  />
                  <p
                    class="c12"
                    font-weight="medium"
                  >
                    Url screen
                  </p>
                </div>
              </div>
              <div
                class="c10"
              >
                <div
                  class="c3"
                >
                  <div
                    class="c19"
                    opacity="1"
                  />
                  <p
                    class="c12"
                    font-weight="medium"
                  >
                    Feedback screen
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
